--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,9 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+  "extends": ["next/core-web-vitals", "next/typescript"],
+  "rules": {
+    // Ignorar la regla @typescript-eslint/no-unused-vars
+    "@typescript-eslint/no-unused-vars": "off",
+    // Ignorar advertencias de imágenes de Next.js
+    "@next/next/no-img-element": "off"
+  }
 }
